--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,17 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+        <!-- Logging slf4j -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.12</version>
+        </dependency>
     </dependencies>
 
 </project>
